tests/error/private_func_call_out.gw
// [contains] can't access private
class C {
  fun private void test(){}
}

C c;
c.test();
